<resources>
    <string name="app_name" translatable="false">Best App Ever</string>
    <string name="find_location">Find location</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="error_invalid_location">Invalid location name</string>
    <string name="new_york">Localization</string>
    <string name="error_icon">Error icon</string>
    <string name="go_to_my_locations">Go to my locations</string>
</resources>
