<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_regular"
        android:layout_marginTop="@dimen/distance_regular"
        android:layout_marginEnd="@dimen/distance_regular"
        android:text="@string/find_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?colorHeader"
        app:layout_constraintBottom_toTopOf="@+id/find_location_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/find_location_layout"
        style="@style/Margin.All"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/find_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_york"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        style="@style/Margin.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_location_layout" />

    <TextView
        android:id="@+id/error_description"
        style="@style/Margin.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_invalid_location"
        app:layout_constraintBaseline_toBaselineOf="@+id/submit"
        app:layout_constraintEnd_toStartOf="@+id/submit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/error_image"
        app:layout_constraintTop_toBottomOf="@+id/find_location_layout" />

    <ImageView
        android:id="@+id/error_image"
        style="@style/Margin.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/error_icon"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/submit"
        app:layout_constraintEnd_toStartOf="@+id/error_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/submit"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/places_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/distance_regular"
        android:text="@string/go_to_my_locations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>